# SharedComputing

./: .dockerignore  .gitignore  BackendTerminal.txt  CHANGELOG.md  Dockerfile  README.md  README2.md  backend_helpers.py  backend_service.py  commands.txt  docker-compose.yml  master.py  predict.py  pyproject.toml  re-construction-plan.md  requirements-backend.txt  requirements.txt  run.py  summary_net.md  train.py  train_dist.py  worker.py
Commands & Instructions/: BackendTerminal.txt  XCodeRun.txt  commands.txt
SharedComputingMac/SharedComputingMac/: ContentView.swift  SharedComputingMac.entitlements  SystemMetrics.swift
SharedComputingMac/SharedComputingMac.xcodeproj/: project.pbxproj
SharedComputingMac/SharedComputingMacTests/: SharedComputingMacTests.swift
SharedComputingMac/SharedComputingMacUITests/: SharedComputingMacUITests.swift  SharedComputingMacUITestsLaunchTests.swift
docs/: distributed-training-guide.md  docker-backend.md
ml/: predict.py  train_cifar10.py
ml/distributed/: __init__.py  config.py  master.py  run_master.py  run_worker.py  worker.py
scripts/: run_local.py  run_master.py  run_predict.py  run_worker.py
src/sharedcomputing/: __init__.py
src/sharedcomputing/api/: __init__.py  app.py
src/sharedcomputing/core/: __init__.py  paths.py
src/sharedcomputing/telemetry/: __init__.py
src/sharedcomputing/training/: distributed_local.py  master.py  predict.py  single.py
src/sharedcomputing/workers/: worker.py
tests/: test_backend_helpers.py
tests/core/: test_backend_helpers.py
(+4 files in other folders)
